# skeleton

./: .coveragerc  .flake8  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .pydocstyle.ini  LICENSE  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml
docs/: conf.py
