[tool.poetry]
name = "SKELETON"
version = "0.1.0"
description = "SKELETON"
authors = ["SKELETON"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
# The line length here must match match the line length for `isort`
line-length = 100
target-version = ["py38"]

[tool.isort]
# This must match the line length for `black` above.
line_length = 100

# Two blank lines between the imports and the rest of the code.
# This is a subjective preference.
lines_after_imports = 2

# These are necessary for `isort` to create import statements that are
# compatible with `black`. Changing these will break our auto-formatting.
# See <https://black.readthedocs.io/en/stable/the_black_code_style.html>.
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

# Configure the default section for modules to be put in, and specify some
# modules we know are first-party modules - ie. in this project.
# This is necessary when running isort via pre-commit as it can't inspect
# dependencies.
default_section = "THIRDPARTY"
known_first_party = "SKELETON"
